[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/SetupPlayer/SetupPlayer.gd" type="Script" id=1]

[node name="SetupPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Setup Player"

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -16.0
margin_right = 64.0
margin_bottom = -2.0
text = "Your Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wait" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 22.0
text = "Your Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_right = 64.0
margin_bottom = 24.0

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 52.0
text = "OK"

[node name="ItemList" type="ItemList" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 64.0
margin_right = -104.0
margin_bottom = -88.0
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
